<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/color_background"
    android:orientation="vertical">

    <include layout="@layout/simple_title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_normal"
        android:layout_marginRight="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_huge"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/dimen_twelve"
            android:paddingTop="@dimen/dimen_twelve"
            android:text="@string/integral_exchange_integral_exchange_amount"
            android:textColor="@color/album_FontDark"
            android:textSize="@dimen/font_normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_activity_integral_exchange_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@color/color_white"
                android:hint="@string/integral_exchange_input"
                android:padding="@dimen/dimen_twelve"
                android:textColor="@color/album_FontDark"
                android:textColorHint="@color/album_FontHint"
                android:textSize="@dimen/font_normal" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_eight"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/integral_exchange_need_integral"
                    android:textColor="@color/preference_red"
                    android:textSize="@dimen/font_small" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    tools:text="0"
                    android:textColor="@color/preference_red"
                    android:textSize="@dimen/font_small" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_activity_integral_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_normal"
        android:layout_marginRight="@dimen/margin_normal"
        android:layout_marginTop="@dimen/dimen_sixty_six"
        android:background="@drawable/shape_theme_radius"
        android:gravity="center"
        android:paddingBottom="@dimen/padding_normal"
        android:paddingTop="@dimen/padding_normal"
        android:text="@string/integral_exchange_confirm"
        android:textColor="@color/color_white"
        android:textSize="@dimen/font_large" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_normal"
        android:layout_marginRight="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_huge"
        android:orientation="horizontal"
        android:weightSum="2">


        <View
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/album_FontHint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_twelve"
            android:layout_marginRight="@dimen/dimen_twelve"
            android:text="@string/integral_exchange_description"
            android:textColor="@color/album_FontHint"
            android:textSize="@dimen/font_normal" />

        <View
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/album_FontHint" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_normal"
        android:layout_marginRight="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_normal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/integral_exchange_description_one"
            android:textColor="@color/album_FontHint"
            android:textSize="@dimen/font_small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_two"
            android:text="@string/integral_exchange_description_two"
            android:textColor="@color/album_FontHint"
            android:textSize="@dimen/font_small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_two"
            android:text="@string/integral_exchange_description_three"
            android:textColor="@color/album_FontHint"
            android:textSize="@dimen/font_small" />
    </LinearLayout>
</LinearLayout>