<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_page_bg"
    android:scrollbars="none"
    tools:context="com.ypshengxian.daojia.ui.fragment.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.ypshengxian.daojia.view.ExtendEditText
            android:id="@+id/tv_fragment_login_phone"
            style="@style/Login_Phone"
            android:layout_marginTop="25dp"
            android:digits="0123456789"
            android:drawablePadding="5dp"
            android:inputType="phone"
            android:maxLength="11" />

        <com.ypshengxian.daojia.view.ExtendEditText
            android:id="@+id/tv_fragment_login_pw"
            style="@style/Login_Password"
            android:drawablePadding="5dp"
            android:hint="@string/login_hint_pw_text"
            android:inputType="textPassword" />

        <LinearLayout
            android:id="@+id/ll_fragment_login_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <com.ypshengxian.daojia.view.ExtendEditText
                android:id="@+id/tv_fragment_login_code"
                style="@style/Register_Code"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:digits="0123456789"
                android:drawablePadding="5dp"
                android:inputType="number"
                android:maxLength="6" />

            <TextView
                android:id="@+id/tv_fragment_login_get_code"
                android:layout_width="100dp"
                android:layout_height="44dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/shape_theme_color_bg"
                android:gravity="center"
                android:text="@string/register_get_code_text"
                android:textColor="@color/color_white"
                android:textSize="@dimen/font_normal" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tv_fragment_login_forget_pw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:padding="5dp"
                android:text="@string/login_forget_pw_text"
                android:textSize="@dimen/font_normal" />

            <TextView
                android:id="@+id/tv_fragment_login_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="23dp"
                android:layout_toLeftOf="@+id/tv_fragment_login_forget_pw"
                android:padding="5dp"
                android:text="@string/login_register_text"
                android:textSize="@dimen/font_normal" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_fragment_login_login"
            style="@style/BtnThemeColorSolidBackground"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="58dp"
            android:text="@string/login_string_login_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="100dp"
                android:layout_height="0.5dp"
                android:layout_marginRight="5dp"
                android:background="@color/color_page_line" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_others_login_text"
                android:textColor="@color/color_gray_login_hint_text"
                android:textSize="@dimen/font_small" />

            <View
                android:layout_width="100dp"
                android:layout_height="0.5dp"
                android:layout_marginLeft="5dp"
                android:background="@color/color_page_line" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_fragment_login_wx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:src="@drawable/icon_login_wx" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/login_wx_login_text"
                android:textColor="@color/color_gray_login_hint_text"
                android:textSize="@dimen/font_small" />
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
